tests/fixtures/invalid/sum_none.py
# Cannot call sum() with None
x = sum(None)
